# 27

./: CMakeCache.txt  CMakeLists.txt
1/src/: CMakeLists.txt  main1.cpp
2/: CMakeLists.txt  male_surnames_31_ru_latin.txt
2/src/: .main2.cpp.swp  main2.cpp
3/: CMakeLists.txt
3/src/: main3.cpp
RandomNameLib/: male_names_31_ru_latin.txt
RandomNameLib/inc/: randomName.hpp
RandomNameLib/src/: randomName.cpp
camke-build-debug/: CMakeCache.txt
